--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#C4C4C4</color>
+    <color name="primary_blue">#538DFF</color>
+    <color name="dark_blue">#1D4492</color>
+    <color name="yellow">#E0E27B</color>
 </resources>
