--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,8 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/register_input_email"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:maxLines="1"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
@@ -79,7 +80,9 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/register_input_password"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:maxLines="1"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <CheckBox
