Adding Fragment for Important feature, such as, Home Fragment, Activity Fragment, Chat Fragment, and Profile Fragment

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -24,6 +24,7 @@
                 style="@style/Toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                android:background="#00FFFFFF"
                 app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                 app:title="Register" />
 
