Add Profile Menu

--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -16,11 +16,10 @@
             android:id="@+id/home_profile_picture"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:layout_marginTop="40dp"
             android:src="@drawable/profile_picture"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="40dp"/>
+            app:layout_constraintStart_toStartOf="@+id/textInputLayout6"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/home_greeting"
@@ -46,7 +45,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout6"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="15dp"
@@ -62,7 +61,10 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:background="@color/light_grey4"
+                android:hint="Masukkan pencarian"
+                android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <androidx.viewpager2.widget.ViewPager2
@@ -70,10 +72,11 @@
             android:layout_width="0dp"
             android:layout_height="151dp"
             android:layout_marginTop="15dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/textInputLayout6"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">
+            app:layout_constraintStart_toStartOf="@+id/textInputLayout6"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
+            android:scaleType="fitXY">
 
         </androidx.viewpager2.widget.ViewPager2>
 
@@ -95,7 +98,7 @@
             android:id="@+id/home_tabBar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="9dp"
+            android:layout_marginStart="25dp"
             app:layout_constraintEnd_toEndOf="@+id/textInputLayout6"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -145,6 +148,16 @@
             android:textSize="18sp"
             android:textStyle="bold"/>
 
-
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/home_recycler_recommendation"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:nestedScrollingEnabled="false"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView13"
+            tools:itemCount="5"
+            tools:listitem="@layout/profile_card" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
