--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#C4C4C4</color>
+    <color name="light_gray">#E5E5E5</color>
     <color name="primary_blue">#538DFF</color>
     <color name="dark_blue">#1D4492</color>
     <color name="yellow">#E0E27B</color>
     <color name="colorDividerView">#ECECEC</color>
+    <color name="light_grey4">#F5F5F5</color>
 </resources>
