--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="yellow">#E0E27B</color>
     <color name="colorDividerView">#ECECEC</color>
     <color name="light_grey4">#F5F5F5</color>
+    <color name="yellow_star">#FAC218</color>
 </resources>
