--- a/app/src/main/res/navigation/menu_navigation.xml
+++ b/app/src/main/res/navigation/menu_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/activityScreeenFragment"
-        android:name="com.andre.servicein.ActivityScreeenFragment"
+        android:name="com.andre.servicein.home.activity.ActivityScreeenFragment"
         android:label="fragment_activity_screeen"
         tools:layout="@layout/fragment_activity_screeen" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/homeScreenFragment2"
-        android:name="com.andre.servicein.HomeScreenFragment"
+        android:name="com.andre.servicein.home.HomeScreenFragment"
         android:label="fragment_home_screen"
         tools:layout="@layout/fragment_home_screen" >
         <action
@@ -25,7 +25,7 @@
     </fragment>
     <fragment
         android:id="@+id/chatScreenFragment"
-        android:name="com.andre.servicein.ChatScreenFragment"
+        android:name="com.andre.servicein.home.chat.ChatScreenFragment"
         android:label="fragment_chat_screen"
         tools:layout="@layout/fragment_chat_screen" >
         <action
@@ -34,7 +34,7 @@
     </fragment>
     <fragment
         android:id="@+id/profileScreenFragment"
-        android:name="com.andre.servicein.ProfileScreenFragment"
+        android:name="com.andre.servicein.home.profile.ProfileScreenFragment"
         android:label="fragment_profile_screen"
         tools:layout="@layout/fragment_profile_screen" >
         <action
