--- a/app/src/main/res/layout/fragment_order_choose_payment.xml
+++ b/app/src/main/res/layout/fragment_order_choose_payment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_gray"
-    tools:context=".OrderChoosePayment">
+    tools:context=".home.payment.OrderChoosePaymentFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout2"
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/order_form_tool_bar"
+            android:id="@+id/order_choose_tool_bar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
