--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,7 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayout"
+            android:id="@+id/register_layout_email"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -59,15 +59,15 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Password"
-            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+            app:layout_constraintStart_toStartOf="@+id/register_layout_email"
+            app:layout_constraintTop_toBottomOf="@+id/register_layout_email" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayout2"
+            android:id="@+id/register_layout_password"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
+            app:layout_constraintEnd_toEndOf="@+id/register_layout_email"
             app:layout_constraintStart_toStartOf="@+id/textView2"
             app:layout_constraintTop_toBottomOf="@+id/textView2"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -92,8 +92,8 @@
             android:layout_marginTop="9dp"
             android:text="Keep me Logged in"
             android:buttonTint="@color/primary_blue"
-            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
+            app:layout_constraintStart_toStartOf="@+id/register_layout_password"
+            app:layout_constraintTop_toBottomOf="@+id/register_layout_password" />
 
         <TextView
             android:id="@+id/textView3"
@@ -102,7 +102,7 @@
             android:text="forgot password"
             android:textColor="@color/primary_blue"
             app:layout_constraintBottom_toBottomOf="@+id/check_keep_me"
-            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
+            app:layout_constraintEnd_toEndOf="@+id/register_layout_password"
             app:layout_constraintTop_toTopOf="@+id/check_keep_me" />
 
         <com.google.android.material.button.MaterialButton
