--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,13 +44,15 @@
             app:boxCornerRadiusBottomEnd="8dp"
             app:boxCornerRadiusTopEnd="8dp"
             app:boxCornerRadiusBottomStart="8dp"
-            app:boxCornerRadiusTopStart="8dp">
+            app:boxCornerRadiusTopStart="8dp"
+            android:background="@color/light_gray">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/register_input_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:maxLines="1"/>
+                android:maxLines="1"
+                android:hint="Phone number or Email Address"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
@@ -75,14 +77,16 @@
             app:boxCornerRadiusBottomEnd="8dp"
             app:boxCornerRadiusTopEnd="8dp"
             app:boxCornerRadiusBottomStart="8dp"
-            app:boxCornerRadiusTopStart="8dp">
+            app:boxCornerRadiusTopStart="8dp"
+            android:background="@color/light_gray">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/register_input_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:maxLines="1"/>
+                android:maxLines="1"
+                android:hint="Password"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <CheckBox
@@ -108,10 +112,11 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_login"
             android:layout_width="0dp"
-            android:layout_height="52dp"
+            android:layout_height="70dp"
             android:layout_marginTop="28dp"
             android:text="Login"
-            android:textSize="18sp"
+            android:textSize="20sp"
+            android:textAllCaps="false"
             app:layout_constraintEnd_toEndOf="@+id/textView3"
             app:layout_constraintStart_toStartOf="@+id/check_keep_me"
             app:layout_constraintTop_toBottomOf="@+id/check_keep_me"
@@ -120,7 +125,7 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_register"
             android:layout_width="0dp"
-            android:layout_height="52dp"
+            android:layout_height="70dp"
             android:layout_marginTop="16dp"
             android:text="Register"
             android:textSize="18sp"
@@ -128,7 +133,8 @@
             app:layout_constraintStart_toStartOf="@+id/button_login"
             app:layout_constraintTop_toBottomOf="@+id/button_login"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            app:cornerRadius="8dp"/>
+            app:cornerRadius="8dp"
+            android:textAllCaps="false" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
